nullaway_error_60301454-E820-4D78-8462-D5B4409A3254.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/http/client/JettyClientHttpRequest.java:120: error: [NullAway] dereferenced expression cause is @Nullable
				throw new IOException(cause.getMessage(), cause);
				                           ^
    (see http://t.uber.com/nullaway )
